libcpp 	PR preprocessor/22168: 	* include/cpplib.h (struct cpp_options) <objc>: Update 	documentation. 	* expr.c (eval_token): Warn for use of assertions. 	* directives.c (directive_diagnostics): Warn about extensions. 	(DEPRECATED): New define. 	(DIRECTIVE_TABLE): Use it. gcc 	PR preprocessor/22168: 	* doc/cpp.texi (Top): Update menu. 	(Alternatives to Wrapper #ifndef): New node. 	(Other Directives): Document deprecation. 	(Obsolete Features): Remove menu. 	(Assertions): Merge node into Obsolete Features. 	(Obsolete once-only headers): Move earlier; rename to Alternatives 	to Wrapper #ifndef. 	* doc/cppopts.texi: Update. 	* c.opt (Wdeprecated): Enable for C and ObjC. 	* doc/invoke.texi (Option Summary): Move -Wno-deprecated. 	(C++ Dialect Options): Move -Wno-deprecated from here to... 	(Warning Options): ... here. gcc/testsuite 	PR preprocessor/22168: 	* gcc.dg/pch/import-2.hs: Add -Wno-deprecated. 	* gcc.dg/pch/import-1.hs: Add -Wno-deprecated. 	* gcc.dg/pch/import-2.c: Add -Wno-deprecated. 	* gcc.dg/pch/import-1.c: Add -Wno-deprecated. 	* gcc.dg/cpp/import2.c: Add -Wno-deprecated. 	* gcc.dg/cpp/import1.c: Add -Wno-deprecated. 	* gcc.dg/cpp/trad/assert3.c: Add -Wno-deprecated. 	* gcc.dg/cpp/trad/assert2.c: Add -Wno-deprecated. 	* gcc.dg/cpp/trad/assert1.c: Add -Wno-deprecated. 	* gcc.dg/cpp/ident.c: Add -Wno-deprecated. 	* gcc.dg/cpp/ident-1.c: Add -Wno-deprecated. 	* gcc.dg/cpp/extratokens.c: Add -Wno-deprecated. 	* gcc.dg/cpp/assert3.c: Add -Wno-deprecated. 	* gcc.dg/cpp/assert2.c: Add -Wno-deprecated. 	* gcc.dg/cpp/assert1.c: Add -Wno-deprecated. 	* gcc.dg/cpp/assert4.c: Compile with -ansi and not -pedantic.  Add 	-Wno-deprecated. 	* gcc.dg/cpp/pr22168.c: New file. 	* gcc.dg/cpp/pr22168-2.c: New file.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@135264 138bc75d-0d04-0410-961f-82ee72b054a4