gcc/testsuite/gcc.dg/pch/import-1.hs
@@ -1,4 +1,4 @@
-/* { dg-options "-I. -I $srcdir/gcc.dg/pch" } */
+/* { dg-options "-I. -I $srcdir/gcc.dg/pch -Wno-deprecated" } */
 #import "import-1a.h"
 #include "import-1b.h"
 #include "import-1c.h"
