gcc/testsuite/gcc.dg/pch/import-2.c
@@ -1,4 +1,4 @@
-/* { dg-options "-I. -I $srcdir/gcc.dg/pch/include" } */
+/* { dg-options "-I. -I $srcdir/gcc.dg/pch/include -Wno-deprecated" } */
 
 #include "import-2.h"
 #import "import-2b.h"
