gcc/testsuite/gcc.dg/pch/import-2.hs
@@ -1,4 +1,4 @@
-/* { dg-options "-I $srcdir/gcc.dg/pch/include" } */
+/* { dg-options "-I $srcdir/gcc.dg/pch/include -Wno-deprecated" } */
 
 #import "import-2b.h"
 #import "import-2a.h"
